# spion-emol

./: CMakeLists.txt  README.md
docs/: gpu_propagate_feasibility.md
model_potentials/polar_2d/: CMakeLists.txt  DipoleMat.hpp  Equations.cpp  Equations.hpp  Potentials.cpp  main.cpp
model_potentials/polar_2d/src/: Common.hpp  DipoleMat.cpp  Eigenvalues.cpp  Eigenvalues.hpp  Makefile  Parameters.cpp  Parameters.hpp  Potentials.hpp  Wavefunctions.cpp  Wavefunctions.hpp
model_potentials/spherical_3d/: CMakeLists.txt  run_scan.sh
model_potentials/spherical_3d/src/: Angular.hpp  BoundStateIO.cpp  BoundStateIO.hpp  Common.hpp  DipoleIO.cpp  DipoleIO.hpp  DipoleMat.cpp  DipoleMat.hpp  Eigenvalues.cpp  Eigenvalues.hpp  Equations.cpp  Equations.hpp  Parameters.hpp  Potentials.cpp  Potentials.hpp  RunDirs.cpp  RunDirs.hpp  Wavefunctions.cpp  Wavefunctions.hpp  main.cpp
model_potentials/spherical_3d/tests/: test_3d_harmonic_eigenvalue.cpp  test_angular_orthogonality.cpp  test_cube_c8f8.cpp  test_cube_groundstate.cpp  test_dipole_gauge.cpp  test_dipole_gauge_c8f8.cpp  test_free_particle_K_zero.cpp  test_gaunt_dipole.cpp  test_h2plus_johnson.cpp  test_potential_axisymmetric.cpp  test_potential_hermiticity.cpp  test_riccati_sign_convention.cpp  test_spherical_well_eigenvalue.cpp  test_wavefunction_matching_continuity.cpp
multichannel_tdse/: tdse_recipe_revised.tex
multichannel_tdse/full_tdse/: CMakeLists.txt
multichannel_tdse/full_tdse/omp_stub/: omp.h
multichannel_tdse/full_tdse/scripts/: README.md  ablation_compare.py  analyze_run.py  check_convergence.py  grid_overview.py  grid_table.py  paper_figs.py  plot_run.py  run_one_grid_task.sbatch  run_plots.sh  run_tdse_lrz.sh  submit_ablation.sh  submit_production_grid.sh  submit_range.sh  sweep_lrz.sh
multichannel_tdse/full_tdse/src/: BasisCache.cpp  BasisCache.hpp  BlockEigenstates.cpp  BlockEigenstates.hpp  Common.hpp  DipoleAssembler.cpp  DipoleAssembler.hpp  MockMultiblock.cpp  MockMultiblock.hpp  PerturbationTheory.cpp  PerturbationTheory.hpp  PooledBasis.cpp  PooledBasis.hpp  PooledTDSE.cpp  PooledTDSE.hpp  Pulse.hpp  Rb85Halo.cpp  Rb85Halo.hpp  Rb85Spin.cpp  Rb85Spin.hpp  SpectralReadout.cpp  SpectralReadout.hpp  TDSEDriver.hpp  TDSEHamiltonian.cpp  TDSEHamiltonian.hpp  TaylorStepper.hpp  run_tdse.cpp
multichannel_tdse/full_tdse/tests/: test_block_continuum_m3.cpp  test_block_halo_state.cpp  test_dipole_assembly.cpp  test_dt_convergence_multichannel.cpp  test_dt_convergence_time_dep.cpp  test_first_order_pt.cpp  test_halo_binding_analytic.cpp  test_halo_weights.cpp  test_norm_conservation_time_dep.cpp  test_norm_strong_multichannel.cpp  test_numerov_stack.cpp  test_perturbation_theory.cpp  test_pooled_tdse_recipe.cpp  test_pooled_tdse_toy.cpp  test_power_scaling_weak.cpp  test_pulse_shapes.cpp  test_rb85_thresholds.cpp  test_selection_rule_strong.cpp  test_sigma_plus_hermiticity.cpp  test_sigma_plus_selection.cpp  test_strong_rabi_isolated_pair.cpp  test_taylor_2level_rabi.cpp  test_taylor_convergence.cpp  test_taylor_diagonal_phase.cpp  test_taylor_norm_conservation.cpp  test_time_reversal.cpp  test_virtual_block_m5.cpp
multichannel_tdse/reference_code/: AnalyticSquareWell.cpp  AnalyticSquareWell.hpp  ClosedChannelInhom.cpp  ClosedChannelInhom.hpp  Common.hpp  ComplexResolventEa.cpp  ComplexResolventEa.hpp  Eigenvalues.cpp  Eigenvalues.hpp  Equations.cpp  Equations.hpp  Parameters.hpp  Potentials.cpp  Potentials.hpp  SpinAlgebra.cpp  SpinAlgebra.hpp  Wavefunctions.cpp  Wavefunctions.hpp  main.cpp
postprocessing/: README.md  cross_section_delay.py  diagnose_beta_zero.py  edit_kgrid.py  gather_dipoles.py  gather_dipoles_merge.py  gauge_panels.py  two_photon_delay.py
postprocessing/angular_resolving/: generate_data_fig2_correct.py  generate_data_fig3_correct.py  generate_data_fig4_correct.py  generate_data_fig5_correct.py  plot_fig2_correct.py  plot_fig3_correct.py  plot_fig4_correct.py  plot_fig5_correct.py
postprocessing/diagnostics/: README.md  audit_real_gaunt_table.py  diagnose_somo.py
postprocessing/polar_fft/: cube_riesz_envelope.py  plot_cube_planes.py  polar_fft.py
postprocessing/polar_plots/: README.md  compute_polar_data.py  plot_polar.py  plot_sigma_tau_only.py  rtd_content.py
postprocessing/two_photon_delay/: README.md  RECIPE_LRZ.md
preprocessing/: CMakeLists.txt  qc_to_molden.py
preprocessing/reference_data/: c8f8_augccpvdz_sph.molden  c8f8_augccpvdz_sph_psi4.out  c8f8_augccpvdz_sph_q-1_m2_pcmtetrah_psi4.out  c8f8_ccpvdz_sph.molden  c8f8_ccpvdz_sph_psi4.out  h2_anion_thf.psi4.py  h2_ccpvdz_sph.molden  h2_ccpvdz_sph_psi4.out  h2_ccpvdz_sph_reference.json  h2o_augccpvdz_sph.molden  h2o_augccpvdz_sph_psi4.out  h2o_augccpvdz_sph_q-1_m2_pcmtetrah.molden  h2o_augccpvdz_sph_q-1_m2_pcmtetrah_psi4.out  h2o_augccpvdz_sph_q-1_m2_pcmtetrah_reference.json  h2o_augccpvdz_sph_reference.json  h2o_ccpvdz_sph.molden  h2o_ccpvdz_sph_psi4.out  h2o_ccpvdz_sph_q-1_m2.molden  h2o_ccpvdz_sph_q-1_m2_pcmwater.molden  h2o_ccpvdz_sph_q-1_m2_pcmwater_psi4.out  h2o_ccpvdz_sph_q-1_m2_pcmwater_reference.json  h2o_ccpvdz_sph_q-1_m2_psi4.out  h2o_ccpvdz_sph_q-1_m2_reference.json  h2o_ccpvdz_sph_reference.json
preprocessing/src/: Banner.hpp  main_preprocess.cpp  repair_v_h.cpp
preprocessing/src/angular/: GaussLegendre.hpp  Grid.hpp  Legendre.hpp  Ylm.hpp
preprocessing/src/basis/: MoldenBasis.hpp  Primitive.hpp  SphericalGaussian.hpp
preprocessing/src/io/: HDF5Writer.hpp
preprocessing/src/molden/: Molden.hpp
preprocessing/src/potential/: Hartree.hpp  LocalExchange.hpp  Vnuclear.hpp
preprocessing/src/sce/: RadialGrid.hpp  SCE.hpp  Synthesize.hpp
preprocessing/tests/: test_angular.cpp  test_basis_pointwise.cpp  test_hdf5_roundtrip.py  test_molden_parse.cpp  test_qc_to_molden_roundtrip.sh  test_sce_h2.cpp  test_sce_scaling.cpp  test_v_H_h2.cpp  test_v_H_high_lmax.cpp  test_v_H_pointwise.cpp  test_v_en_h2.cpp  tiny_json.hpp
preprocessing/tools/: gen_reference.py  inspect_somo.py  run_psi4_c8f8_b3lyp.py
src/: main.cpp  run_mpi.cpp
src/angular/: Gaunt.hpp  (+1 more)
validation/: threading_and_bench_depth.md
(+135 files in other folders)
